fix css - revert button not visible

--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@ padding: 30px;
 .EditorField {
   border: 1px solid #ccc;
   border-radius: 5px;
-  margin-top: 140px;
+  margin-top: 200px;
 
 }
 
